--- a/Phoenix.Api/appsettings.json
+++ b/Phoenix.Api/appsettings.json
@@ -2,10 +2,10 @@
   "Authentication": {
     "AzureAd": {
       "AADInstance": "https://login.microsoftonline.com/{0}/v2.0/.well-known/openid-configuration?p={1}",
-      "Audience": "https://medsyspbgphoenixsfcluster.eastus2.cloudapp.azure.com/api",
-      "ClientId": "b6a0f4fb-b00b-41ae-a3d6-31cd93939432",
-      "Domain": "MEDsysPbgPhoenixB2C.onmicrosoft.com",
-      "TenantId": "7aceb96a-02d1-4480-8e28-3b903d362c85",
+      "Audience": "https://{domainname}/api",
+      "ClientId": "",
+      "Domain": "",
+      "TenantId": "",
       "SignUpSignInPolicyId": "B2C_1_SignUpInPolicy"
     }
   },
